# py-sanic-samples

./: README.md  pyproject.toml  server.py  server_openapi.py  somewhere.py
py_sanic_samples/: app.py
py_sanic_samples/api/: __init__.py  info.py
py_sanic_samples/api/content/: __init__.py  authors.py  books.py  note.py  static.py  statics.py
py_sanic_samples/api/swagger/: __init__.py  composition_view.py  params.py  simple_view.py
py_sanic_samples/config/: log.py
src/py_sanic_samples/: app.py
src/py_sanic_samples/api/: __init__.py  info.py
src/py_sanic_samples/api/content/: authors.py  static.py
tests/: README.md  corpus_handle.py  handle_file.py  handle_list.py  handle_multi_file_and_dir.py  model_metric.py  multifile_corpus.py  read_ner_dataset.py  sklearn_demo.py  test.ipynb  test_ner.py  test_py_sanic_samples.py  test_sample.py
